<resources>
    <string name="app_name">GastoViagem</string>
    <string name="distancia_hint">Distância</string>
    <string name="distancia_description">Total de quilômetros</string>
    <string name="preco_hint">Preço</string>
    <string name="preco_description">Preço por litro</string>
    <string name="autonomia_hint">Autonomia</string>
    <string name="autonomia_description">KMs por litro</string>
    <string name="total_cost_label">SEU GASTO TOTAL SERÁ DE:</string>
    <string name="total_cost">R$ 0</string>
</resources>